Release CMTK-1.3.0:

- Added: filter, levelset, make_initial_affine, mrbias, and reformatx tools
    now support database updating.
- Added: database backend for storing images and transformations between their
    coordinate spaces.
- Added: "convertx --binarize-thresh" operation
- Bugfix: shared-library build configuration was broken.
- Bugfix: "convertx --mask-inverse" was broken.
- Added: "mk_phantom_3d" tool can now import either an image including
    existing pixel data or just the grid geometry.
- Added: "mk_phantom_3d" tool now supports three different coordinate modes:
    absolute, relative, indexed.
- Added: "--revert" image operation for "imagemath" tool to revert binary
    masks.
- API: moved "DrawXXX" members from "DataGrid" class into a new, dedicated
    painter class, "UniformVolumePainter."
- Added: image operation for medial skeleton based on analysis of the Hessian
    eigensystem. Note that this is currently broken and only kept for future
    investigation.
- Added: two differential operator members for "UniformVolume" class, one for
    gradient and one for Hessian matrix, each implemented using central
    differences.
- Added: symmetric eigensystem can now be sorted either by absolute or by
    actual eigenvalues.
- Bugfix: UniformDistanceMap constructor failed to copy orientation and
    space-related information from input UniformVolume object
- Added: Euclidean distance map computation in "convertx" tool.
- Added: "warpx" and "congeal_warp" can now do repeated histogram-based
    intensity matching of floating to reference image, with a transfer
    function that changes as warping progresses and thus takes into account
    shifting volume proportions.
- Added: "convertx" now does histogram equalization. Also added tests.
- Refactored: created a new class for histogram-based intensity matching,
    cmtk::HistogramMatchingLookup.
- Added: first library-level tests for TypedArray class.


Release CMTK-1.2.2 (2010-02-25):
